--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Journal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles/index.css" />
     <script type="module" src="scripts/index.js" defer></script>
   </head>
-  <body></body>
+  <body class="grid">
+    <header>
+      <nav class="nav">
+        <ul class="nav-list flex flex--align-center">
+          <li class="nav-logo">
+            <a class="flex flex--align-center nav-logo__link" href="#">
+              <img
+                class="nav-logo__img"
+                src="assets/images/logo.png"
+                alt="Learning journal logo"
+              />
+              <span class="nav-logo__text">My learning journal</span>
+            </a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
