Adds JS rendering of post data

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="styles/index.css" />
     <script type="module" src="scripts/index.js" defer></script>
   </head>
   <body class="grid">
-    <header>
+    <header class="header">
       <nav class="nav">
         <ul class="nav-list flex flex--align-center">
           <li class="nav-logo">
@@ -37,7 +36,12 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+
+    <main class="main">
+      <section id="posts-section" class="posts-section">
+        <!-- This is where the post data will populate  -->
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
