Adds initial responsive grid layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/index.css" />
     <script type="module" src="scripts/index.js" defer></script>
   </head>
-  <body class="grid">
+  <body>
     <header class="header">
       <nav class="nav">
         <ul class="nav-list flex flex--align-center">
