Refactors index files

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <header class="header">
       <nav class="nav">
         <ul class="nav-list flex flex--align-center">
-          <li class="nav-logo">
-            <a class="flex flex--align-center nav-logo__link" href="#">
+          <li class="nav-logo__li">
+            <a class="nav-logo__link flex flex--align-center" href="index.html">
               <img
-                class="nav-logo__img"
+                class="nav-logo__icon"
                 src="assets/images/logo.png"
                 alt="Learning journal logo"
               />
-              <span class="nav-logo__text">My learning journal</span>
+              <span class="nav-logo__wordmark">My learning journal</span>
             </a>
           </li>
           <li>
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li>
             <a class="nav-link" href="#">About Me</a>
@@ -39,7 +39,7 @@
 
     <main class="main">
       <section id="posts-section" class="posts-section">
-        <!-- This is where the post data will populate  -->
+        <!-- This is where the post data populates  -->
       </section>
     </main>
     <footer></footer>
