Fixes responsive layout for posts section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main class="main">
-      <section id="posts-section" class="posts-section">
+      <section id="posts-section" class="posts-section grid">
         <!-- This is where the post data populates  -->
       </section>
     </main>
