Initial home page build out

--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
     </header>
 
     <main class="main">
-      <section id="posts-section" class="posts-section grid">
-        <!-- This is where the post data populates  -->
+      <section id="posts-section" class="posts-section">
+        <div class="posts-container grid" id="posts-container">
+          <!-- This is where the post data populates  -->
+        </div>
+        <button class="view-more-btn btn" id="view-more-btn">View More</button>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <p class="footer__text">My Learning Journal</p>
+        <p class="footer__date" id="footer__date"></p>
+      </div>
+    </footer>
   </body>
 </html>
