--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Journal</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,11 +34,30 @@
               <span class="nav-logo__wordmark">My learning journal</span>
             </a>
           </li>
-          <li>
+          <li class="nav-li hidden">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li>
-            <a class="nav-link" href="#">About Me</a>
+          <li class="nav-li hidden">
+            <a class="nav-link" href="pages/about.html">About Me</a>
+          </li>
+          <li class="ham-btn-li">
+            <button class="btn btn--ham-menu">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </li>
+        </ul>
+
+        <ul class="nav-menu flex flex--column hidden" id="nav-menu">
+          <li class="ham-btn-li">
+            <button class="btn btn--ham-menu">
+              <i class="fa-solid fa-xmark"></i>
+            </button>
+          </li>
+          <li class="nav-li">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a class="nav-link" href="pages/about.html">About Me</a>
           </li>
         </ul>
       </nav>
